--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Roleta Monster Hunter Wilds</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <h1>🎯 Roleta de Caçada - Monster Hunter Wilds</h1>
 
   <div class="roletas">
     <div class="roleta-container">
-      <div class="pointer left"></div>
+      <img class="img-pointer" src="assets/greatsword-pointer.png" alt="Ponteiro Espada" />
       <canvas id="wheelMonsters" width="300" height="300"></canvas>
       <p class="label">Monstro Sorteado: <span id="resultMonster">---</span></p>
     </div>
 
     <div class="roleta-container">
-      <div class="pointer left"></div>
+      <img class="img-pointer" src="assets/greatsword-pointer.png" alt="Ponteiro Espada" />
       <canvas id="wheelWeapons" width="300" height="300"></canvas>
       <p class="label">Arma Sorteada: <span id="resultWeapon">---</span></p>
     </div>
@@ -27,4 +29,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
